--- a/main.css
+++ b/main.css
@@ -9,27 +9,8 @@
     height: 90px;
     width: 90px;
     border-radius: 90px;
-  }
-  
-  #row1 {
-    display: flex;
+    display: inline-block;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  
-  #row2 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  
-  #row3 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
   }
   
   div#display {
